# Sonata

./: .gitignore  Cargo.toml  build.rs  rustfmt.toml
sketch/: Cargo.toml  rustfmt.toml
sketch/src/: buffer.rs  command_buffer.rs  command_pool.rs  debug.rs  framebuffer.rs  graphic_context.rs  instance.rs  lib.rs  logical_device.rs  physical_device.rs  pipeline.rs  queue_family.rs  renderer.rs  renderpass.rs  shader.rs  surface.rs  swapchain.rs  sync.rs  utilities.rs  utility.rs  vertex.rs
sketch/src/buffers/: buffer.rs  index.rs  mod.rs  uniform.rs  vertex.rs
sketch/src/commands/: command_buffer.rs  command_pool.rs
sketch/src/device/: debug.rs  instance.rs  logical_device.rs  mod.rs  physical_device.rs  queue_family.rs  surface.rs  window.rs
sketch/src/model/: mod.rs  model.rs
sketch/src/models/: mesh.rs  mod.rs  model.rs
sketch/src/pipeline/: descriptor_layout.rs  descriptor_pool.rs  descriptor_set.rs  mod.rs  pipeline.rs
sketch/src/pipelines/: descriptor_layout.rs  descriptor_pool.rs  descriptor_set.rs  pipeline.rs  shader.rs
sketch/src/renderpass/: framebuffer.rs  mod.rs  renderpass.rs  swapchain.rs
sketch/src/renderpasses/: framebuffer.rs  renderpass.rs  swapchain.rs
sketch/src/utilities/: debug.rs  mod.rs  utility.rs
sketch/src/utility/: debug.rs
sonata/: Cargo.toml  build.rs
sonata/src/: components.rs  control.rs  entity_factory.rs  main.rs  model.rs  movement.rs  render.rs  timestep.rs
src/: components.rs  control.rs  entity_factory.rs  main.rs  move.rs  movement.rs  render.rs
src/render/: mod.rs  sync.rs
src/render/buffers/: buffer.rs  index.rs  uniform.rs  vertex.rs
src/render/commands/: command_buffer.rs  command_pool.rs  mod.rs
src/render/device/: debug.rs  instance.rs  mod.rs  physical_device.rs  queue_family.rs  surface.rs
src/render/models/: mesh.rs
src/render/pipelines/: descriptor_layout.rs  descriptor_pool.rs  mod.rs  pipeline.rs  shader.rs
src/render/renderpasses/: framebuffer.rs  renderpass.rs  swapchain.rs
src/systems/: control.rs  mod.rs  movement.rs  render.rs
wind/: Cargo.toml
wind/src/: backup  component.rs  entity.rs  lib.rs  system.rs
