[package]
name = "sonata"
version = "0.0.1"
authors = ["Caleb Daniels <CJordanDaniels@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.20.0-alpha5"
log = "0.4.8"
env_logger = "0.7.1"
sketch = { path = "sketch", version = "0.0.1" }
wind = { path = "wind", version = "0.0.1" }

[build-dependencies]
shaderc = "0.6.1"