[package]
name = "sonata"
version = "0.0.1"
authors = ["Caleb Daniels <CJordanDaniels@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.30.0"
imgui = "0.4.0"
imgui-winit-support = "0.4.0"
winit = "0.22.2"
log = "0.4.8"
env_logger = "0.7.1"
sketch = { path = "sketch", version = "0.1.0" }
wind = { path = "wind", version = "0.0.2" }

[build-dependencies]
shaderc = "0.6.1"
build-deps = "0.1.4"