[package]
name = "sketch"
version = "0.1.0"
authors = ["Caleb Daniels <CJordanDaniels@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

description = "Vulkan rendering system"
license = "GPL-3.0-or-later"

[dependencies]
ash = "0.29.0"
log = "0.4.8"
memoffset = "0.5.3"
wind = { path = "../wind", version = "0.0.1" }