[package]
name = "sketch"
version = "0.1.0"
authors = ["Caleb Daniels <CJordanDaniels@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

description = "Vulkan rendering system"
license = "GPL-3.0-or-later"

[dependencies]
ash = "0.31.0"
imgui = "0.4.0"
imgui-rs-vulkan-renderer = "0.4.2"
log = "0.4.8"
memoffset = "0.5.4"
cgmath = "0.17.0"
winapi = "0.3.9"