[package]
name = "sketch"
version = "0.1.0"
authors = ["Caleb Daniels <CJordanDaniels@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

description = "Vulkan rendering system"
license = "GPL-3.0-or-later"

[dependencies]
ash = "0.31.0"
imgui = "0.5.0"
imgui-rs-vulkan-renderer = "0.5.0"
log = "0.4.11"
memoffset = "0.5.6"
ultraviolet = "0.7.4"
winapi = "0.3.9"