[package]
name = "sonata"
version = "0.0.1"
authors = ["Caleb Daniels <CJordanDaniels@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.31.0"
imgui = "0.5.0"
imgui-winit-support = "0.5.0"
winit = "0.22.2"
winit_input_helper = "0.7.0"
log = "0.4.11"
env_logger = "0.7.1"
ultraviolet = "0.7.4"
specs = { version = "0.16.1", features = ["specs-derive"] }
sketch = { path = "../sketch", version = "0.1.0" }

[build-dependencies]
shaderc = "0.6.2"
build-deps = "0.1.4"